# giraph

./: .gitignore  README.md  demo.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: checks.yml  docs.yml  tests.yml
.husky/: pre-push
giraph/: __init__.py  _from_str.py  buffer.py  from_str.py  grapheme.py  logging.py
requirements/: dev.in  dev.txt  requirements.in  requirements.txt
