[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "giraph"
requires-python = ">=3.13"
version = "0.1.0"
dynamic = ["dependencies", "optional-dependencies"]

[tool.coverage.run]
omit = ["tests/**", "**/__main__.py"]

[tool.coverage.report]
fail_under = 50

[tool.pytest.ini_options]
filterwarnings = ["ignore"]

[tool.ruff]
lint.ignore = [
	# ambiguous variable name
	"E741",
]
line-length = 80
target-version = "py313"

[tool.setuptools]
packages = ["giraph"]

[tool.setuptools.dynamic]
dependencies = { file = "requirements/requirements.txt" }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = "requirements/dev.txt" }
